--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-scroll": "^1.7.16",
-    "react-spring": "^8.0.27"
+    "react-spring": "^8.0.27",
+    "scrollreveal": "^4.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
