--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "react-scripts": "3.4.1",
         "react-scroll": "^1.7.16",
         "react-spring": "^8.0.27",
-        "scrollreveal": "^4.0.6"
+        "scrollreveal": "^4.0.6",
+        "validator": "^13.0.0"
     },
     "scripts": {
         "start": "react-scripts start",
